<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeManager</string>
    <string name="tasks_title">Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="delete_task">Delete</string>
    <string name="message_box_title">An important task</string>
    <string name="message_timesheet_not_up_to_date"></string>
    <string-array name="menu_items_array">
        <item>Today</item>
        <item>Calendar</item>
        <item>Tasks</item>
        <item>Statistics</item>
    </string-array>
    <string-array name="items_priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    /string-array>
    <string-array name="items_statistics">
        <item>Today</item>
        <item>Per week</item>
        <item>Per month</item>
    </string-array>
    <string name="new_task">Add</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="taskTitle_editText">Title</string>
    <string name="taskQuantH_editText">Number of hours</string>
    <string name="taskPriority_textView">Priority</string>

    <!--add_task_activity-->

    <string name="add_btn_task_AddTaskActivity">Add</string>

    <!--add_task_to_day_timetable_activity-->

    <string name="textViewTasksFragmentHeader_AddToDay">Tasks</string>

    <!--edit_task_activity-->

    <string name="edit_btn_task_EditTaskActivity">Edit</string>
    <string name="checkboxTitle_textView_EditTaskActivity">Agreed</string>
    <string name="change_task_EditTaskActivity">Replace task</string>


    <!--statistics_fragment-->

    <string name="textViewStatisticsFragmentHeader">Statistics</string>
    <string name="current_task">Current:</string>
    <string name="execute_task">Executed:</string>
    <string name="overdue_task">Not satisfied:</string>

    <!--tasks_fragment-->

    <string name="textViewTasksFragmentHeader">Tasks</string>

    <!--today_fragment-->

    <string name="textViewTodayFragmentHeader">Today</string>

</resources>