<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBodyLight"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_AddTaskActivity"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/taskTitle_editText"
        android:textColorHint="#939393"
        android:textColor="#000"
        android:singleLine="false"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="27dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff56718a"
        android:id="@+id/view_AddTaskActivity"
        android:layout_below="@+id/title_AddTaskActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/items_priority"
        android:id="@+id/spinner_AddTaskActivity"
        android:background="@android:color/transparent"
        android:layout_below="@+id/priority_textView_AddTaskActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quantH_editText_AddTaskActivity"
        android:background="@android:color/transparent"
        android:hint="@string/taskQuantH_editText"
        android:layout_below="@+id/view_AddTaskActivity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:inputType="numberDecimal"
        android:textColor="#000"
        android:textColorHint="#939393" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff56718a"
        android:id="@+id/view2_AddTaskActivity"
        android:layout_below="@+id/quantH_editText_AddTaskActivity"
        android:layout_alignRight="@+id/title_AddTaskActivity"
        android:layout_alignEnd="@+id/title_AddTaskActivity"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/add_btn_task_AddTaskActivity"
        android:id="@+id/add_btn_task_AddTaskActivity"
        android:background="@color/backgroundMain"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:clickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/taskPriority_textView"
        android:id="@+id/priority_textView_AddTaskActivity"
        android:textColor="#939393"
        android:textSize="20dp"
        android:layout_below="@+id/view2_AddTaskActivity"
        android:layout_alignLeft="@+id/quantH_editText_AddTaskActivity"
        android:layout_alignStart="@+id/quantH_editText_AddTaskActivity"
        android:layout_marginTop="10dp" />


</RelativeLayout>